con book.md